--- a/Modelo_Naive_Bayes.ipynb
+++ b/Modelo_Naive_Bayes.ipynb
@@ -131,7 +131,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "import warnings\n",
         "import random\n",
-        "#warnings.filterwarnings(\"ignore\")"
+        "warnings.filterwarnings(\"ignore\")"
       ]
     },
     {
